; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_preprocessor_remove_def.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_preprocessor_remove_def.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cf_preprocessor = type { i32 }
%struct.strref = type { i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cf_preprocessor_remove_def(%struct.cf_preprocessor* %0, i8* %1) #0 {
  %3 = alloca %struct.cf_preprocessor*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.strref, align 8
  store %struct.cf_preprocessor* %0, %struct.cf_preprocessor** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = getelementptr inbounds %struct.strref, %struct.strref* %5, i32 0, i32 0
  store i8* %6, i8** %7, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = getelementptr inbounds %struct.strref, %struct.strref* %5, i32 0, i32 1
  store i32 %9, i32* %10, align 8
  %11 = load %struct.cf_preprocessor*, %struct.cf_preprocessor** %3, align 8
  %12 = call i32 @cf_preprocess_remove_def_strref(%struct.cf_preprocessor* %11, %struct.strref* %5)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @cf_preprocess_remove_def_strref(%struct.cf_preprocessor*, %struct.strref*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
